# renderform

./: .gitignore  .gitmodules  CMakeLists.txt  MISC_NOTES.md  Makefile  README.md  classifications.md  ideas.md  plan.md
MathTextual/: CMakeLists.txt  main.cpp
include/renderform/: formtree.hpp  formula.hpp  renderform.hpp
old-demo/: CMakeLists.txt
src/: CMakeLists.txt  cli.cpp  formtree.cpp  formula.cpp  renderform.cpp
src/classifiers/: knn.cpp  knn.hpp  symbols.cpp  symbols.hpp
src/modules/: character.cpp  character.hpp  cleaner.cpp  cleaner.hpp  partitioner.cpp  partitioner.hpp  recognizer.cpp  recognizer.hpp  renderer.hpp
